--- a/user_update.html
+++ b/user_update.html
@@ -17,7 +17,7 @@
 		
 		<form name="accountupdate" method="POST" class="ak-form user-update">
 			<div id="form" class="user-update">			
-				{{ form.as_div }}			
+				{{ form.as_p }}			
 				<input type="submit" class="submit" value="Update My Info" />
 			</div>
 		</form>
