--- a/user_update.html
+++ b/user_update.html
@@ -5,14 +5,13 @@
 
 <section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
-		{% block title %}Update Your Info{% endblock %}
-
-		<h2>{{ user.name }}</h2>
+		<h2 id="page-title" class="title2">{% block title %}Update Your Info{% endblock %}</h2>
+		<h3 class="section-header meta margin-bottom-large">{{ user.name }}</h3>		
 		<div id="content" class="user-update">
 			{% if updated %}
-				<h3>Thanks! Your information has been updated. <a href="/logout">Click here to log out.</a></h3><br>
+				<p>Thanks! Your information has been updated. <a href="/logout">Click here to log out.</a></p><br>
 			{% endif %}
-			<p class="lead">Update your information:</p>
+<!--			<p class="lead">Update your information:</p>-->
 		</div>
 		
 		<form name="accountupdate" method="POST" class="ak-form user-update">
