--- a/user_update.html
+++ b/user_update.html
@@ -2,6 +2,9 @@
 {% load actionkit_tags %}
 
 {% block content %}
+<style>
+input, select, textarea{max-width: initial;}
+</style>
 
 <section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
