--- a/password.html
+++ b/password.html
@@ -4,7 +4,7 @@
 {% block content %}
 <section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
-		<div id="action-header" class="c6 ct10 cm10 c-wide">
+		<div id="action-header">
 		{% if message %}
 		    <p class="loud large">{{ message }}</p>
 		{% else %}
@@ -21,7 +21,7 @@
 		
 		    {% endif %}    
 		</div>	
-		<div id="form" class="c4 ct7_5 cm10 c-wide ak-labels-above">
+		<div id="form" class="ak-labels-above">
 			<form action="{{ app_path }}" method="post" id="login-form" class="login-form">				
 				{{ form.as_p }}
 	      <div class="submit-row">
