--- a/reset.html
+++ b/reset.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+<section id="action-lead" class="section donate-lead action-lead title-section width-normal padding-normal bg-white">
 	<div class="section-inner">
 		<h2 class="page-title">Enter your desired password in the boxes below. </h2>
 		{% if message %}
