--- a/user_update.html
+++ b/user_update.html
@@ -6,7 +6,7 @@
 input, select, textarea{max-width: initial;}
 </style>
 
-<section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+<section id="action-lead" class="section donate-lead action-lead title-section width-normal padding-normal bg-white">
 	<div class="section-inner">
 		<h2 id="page-title" class="title2">{% block title %}Update Your Info{% endblock %}</h2>
 		<h3 class="section-header meta margin-bottom-large">{{ user.name }}</h3>		
