--- a/password.html
+++ b/password.html
@@ -2,19 +2,19 @@
 {% load actionkit_tags %}
 
 {% block content %}
-<section id="action-lead" class="section donate-lead action-lead title-section width-normal padding-normal bg-white">
+<section id="action-lead" class="section donate-lead action-lead title-section width-skinny padding-normal bg-white">
 	<div class="section-inner">
 		<div id="action-header">
 		{% if message %}
 		    <p class="loud large">{{ message }}</p>
 		{% else %}
 		    {% if first %}
-			    <h1>Set up your password</h1>
+			    <h2>Set up your password</h2>
 					<p class="lead">Enter your email and we'll send you a link to set up a password so you can log in.</p>
 				
 					<p class="lead">If your email address is not recognized as valid, make sure you are using the email address associated with your events or donations at 350.org. You can also <a href="http://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>			
 				{% else %}
-			    <h1>Reset your password</h1>
+			    <h2>Reset your password</h2>
 						<p class="lead">Fill out the form and we'll send you a link to reset your password.</p>
 			
 						<p class="lead">If your email address is not recognized as valid, make sure you are using the email address you used to sign up at 350.org. You can also <a href="http://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>
