--- a/login.html
+++ b/login.html
@@ -1,18 +1,15 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
 {% block content %}
-<section id="action-lead" class="section donate-lead action-lead title-section width-normal padding-normal bg-white">
+<section id="action-lead" class="section donate-lead action-lead title-section width-skinny padding-normal bg-white">
 	<div class="section-inner">
 		<div id="action-header">
 
-			<h1>{% filter ak_text:"user_login_intro"|title %}Update your personal information and manage your donations.{% endfilter %}</h1>
+			<h2>{% filter ak_text:"user_login_intro"|title %}Update your personal information and manage your donations.{% endfilter %}</h2>
 			<p>{% filter ak_text:"user_login_first_time" %}If this is your first time logging in, you'll need to set up your password.{% endfilter %}</p>
 			<p>
 					<a class="button" href="/forgot/?next={{ next }}&first=1&email={{ email }}">{% filter ak_text:"user_login_set_up_pw"|capfirst %}Set up your password{% endfilter %}.</a>
 			</p>
-			{% if error_message %}
-				<p class="errornote">{{ error_message }}</p>
-			{% endif %}
 			
 			{% if no_password %}
 				<p>{% filter ak_text:"user_login_first_time_error" %}It looks like you've never logged in before, please set up your password.{% endfilter %}</p>
@@ -33,7 +30,7 @@
 
 		<div id="form" class="ak-labels-overlaid ak-err-below">
 			<form action="{{ app_path }}" method="post" id="login-form" class="login-form">
-				<h5 class="form-title">{% filter ak_text:"general_log_in"|title %}Log In{% endfilter %}</h5>
+				<h3 class="form-title">{% filter ak_text:"general_log_in"|title %}Log In{% endfilter %}</h3>
 			  <div id="id_email_box">
 			    <label for="id_email">{% filter ak_text:"field_email"|capfirst %}Email Address{% endfilter %}</label>
 			    <input type="text" name="email" value="{{ email }}" id="id_email" title="{% filter ak_text:'user-login-email-instructions' %}Enter the email you signed up with here.{% endfilter %}" />
@@ -46,10 +43,7 @@
 			    <input type="hidden" name="next" value="{{ next }}" />
 
 				{% if invalid %}
-					<p class="error">{% filter ak_text:"user_login_error" %}Incorrect e-mail or password.  Try again, or reset your password.{% endfilter %}</p>
-					<p>
-						<a class="button" href="/forgot/?next={{ next }}&email={{ email }}">{% filter ak_text:"user_login_reset_password"|capfirst %}Reset your password{% endfilter %}</a>.
-					</p>
+					<p class="error">{% filter ak_text:"user_login_error" %}Incorrect e-mail or password.  Try again, or <a href="/forgot/?next={{ next }}&email={{ email }}">reset your password</a>a>.{% endfilter %}</p>
 				{% endif %}
 				
 			  <div class="submit-row">
