oops forgot some tags

--- a/login.html
+++ b/login.html
@@ -49,6 +49,8 @@
 				<a href="{% url 'user_password_forgot' %}?next={{ next }}&amp;first=1&amp;email={{ email }}">{% filter ak_text:"user_login_first_time_start" %}Never logged in before?{% endfilter %}</a>
 			</p>
 		</div>
+	</div>
+</section>		
 <script type="text/javascript">
 $(document).ready(function(){
 actionkit.forms.installOverlayLabelHandler();
