--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
 {% block content %}
-<section id="action-lead" class="section donate-lead action-lead title-section width-skinny padding-normal bg-white">
+<section class="section donate-lead action-lead title-section width-skinny padding-normal bg-white">
 	<div class="section-inner">
 		<div id="action-header">
 
