still playing with padding

--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
 {% block content %}
-<section class="section width-skinny padding-normal bg-white">
+<section class="section width-skinny padding-medium bg-white">
 	<div class="section-inner">
 		<div id="action-header">
 
@@ -39,9 +39,9 @@
 				    <input type="password" name="password" id="id_password" />
 				  </div>
 
-				  <div class="submit-row">
+				  <p class="submit-row">
 				    <input type="submit" class="submit" value="Log In" />
-				  </div>
+				  </p>
 			  
 			</form>		
 			<p style="margin-top: 5px;">
