keep those inputs full-width

--- a/login.html
+++ b/login.html
@@ -1,6 +1,10 @@
 {% extends "./wrapper.html" %}
 {% load actionkit_tags %}
 {% block content %}
+<style>
+input, select, textarea{max-width: initial;}
+</style>
+
 <section class="section width-skinny padding-medium bg-white">
 	<div class="section-inner">
 		<div id="action-header">
