--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@ input, select, textarea{max-width: initial;}
 		<div id="action-header">
 
 			<h2>{% filter ak_text:"general_log_in"|title %}Sign In{% endfilter %}</h2>
-			<p>{% filter ak_text:"user_login_intro"|title %}Sign in to your personal information and manage your donations.{% endfilter %}</p>
+			<p>{% filter ak_text:"user_login_intro" %}Sign in to your personal information and manage your donations.{% endfilter %}</p>
 
 			<div class="errors">
         {% if error_message %}
