--- a/wrapper.html
+++ b/wrapper.html
@@ -132,7 +132,7 @@ actionkit.forms.initForm('act');
 	{% if templateset.custom_fields.site_logo_html %}
 			{{ templateset.custom_fields.site_logo_html }}
 	{% else %}
-			<span class="text-large2"><a id="footer-logo" class="tf-logo text-large3" href="https://350.org/">350.org</a></span> &nbsp; /
+			<span class="text-large2"><a id="footer-logo" class="tf-logo text-large3" href="https://350.org/">350.org</a></span>
 	{% endif %}
 	{% if templateset.custom_fields.site_footer_menu %}
 		<div class="footer-custom-links">
