--- a/login.html
+++ b/login.html
@@ -3,6 +3,12 @@
 {% block content %}
 <style>
 input, select, textarea{max-width: initial;}
+.errormsg{
+    margin-bottom: 15px;
+    border: rgb(255, 0, 0) 1px solid;
+    padding: 10px;
+    background: rgba(255,0,0,.2);	
+}
 </style>
 
 <section class="section width-skinny padding-medium bg-white">
@@ -59,6 +65,10 @@ input, select, textarea{max-width: initial;}
 $(document).ready(function(){
 actionkit.forms.installOverlayLabelHandler();
 });
-document.getElementById('id_{% if email %}password{% else %}email{% endif %}').focus()
+
+  actionkit.forms.contextRoot = '/context/';
+  actionkit.forms.initValidation('login-form');
+
+	document.getElementById('id_{% if email %}password{% else %}email{% endif %}').focus()
 </script>
 {% endblock %}
