--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <style>
 input, select, textarea{max-width: initial;}
 .errormsg{
-    margin-bottom: 15px;
+    margin-bottom: 15px !important;
     border: rgb(255, 0, 0) 1px solid;
     padding: 10px;
     background: rgba(255,0,0,.2);	
