removing accent from "réal"

--- a/event_create.html
+++ b/event_create.html
@@ -254,7 +254,7 @@
 
       <div id="unknown_user" class="">
         <fieldset id="user-info">
-          <p>({% filter ak_text:"event_create_contact_privacy_note" %}This information will remain private{% endfilter %})</p>
+          <p class="text-center">({% filter ak_text:"event_create_contact_privacy_note" %}This information will remain private{% endfilter %})</p>
               {% include "./user_form.html" %}
 {% if update %}
           <script type="text/javascript">
