Revert "background image"
This reverts commit 180fa7bd0161f57e84a6e6766ca88a5c552e6dd9.

--- a/reset.html
+++ b/reset.html
@@ -1,15 +1,13 @@
-{% extends "./wrapper.html" %}
-{% load actionkit_tags %}
+{% extends "./wrapper.html" %}{% load actionkit_tags %}
 
 {% block content %}
 
-<section class="section width-skinny padding-medium bg-white">
+<section id="action-lead" class="section donate-lead action-lead title-section width-normal padding-normal bg-white">
 	<div class="section-inner">
-		<div id="action-header">
-			<h2>Enter your desired password in the boxes below. </h2>
-				{% if message %}
-				<p class="loud large">{{ message }}</p>
-				{% endif %}
+		<h2 class="page-title">Enter your desired password in the boxes below. </h2>
+		{% if message %}
+		<p class="loud large">{{ message }}</p>
+		{% endif %}
 		<form action="{{ app_path }}" method="post" id="login-form">
 		  {{ form.as_p }}
 		
