--- a/donate.html
+++ b/donate.html
@@ -535,19 +535,22 @@
 
 <div id="donation-other" class="section padding-medium width-normal bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}">
 	<div class="section-inner">
-		{% if page.custom_fields.page_is_c4 %}
+{% if templateset.custom_fields.donate_footer_text %}
+	{{ templateset.custom_fields.donate_footer_text }}
+{% else %}
+	{% if page.custom_fields.page_is_c4 %}
 		<p class="strong">Contributions or gifts to 350 Action are not deductible as charitable contributions for Federal income tax purposes.</p>
 		<hr>
-		{% endif %}
+	{% endif %}
 		<p><img style="float:right;margin:0 0 1em 1em;" src="https://s3.amazonaws.com/s3.350.org/images/RapidSSL_SEAL-90x50.gif" height="40" width="70" alt="This site is secured by RapidSSL" />
-			{% filter ak_text:"donate_security" %}
+	{% filter ak_text:"donate_security" %}
 			<strong class="text-small-caps">Security:</strong> This page uses <a href="https://en.wikipedia.org/wiki/HTTP_Secure" target="_blank">Secure HTTP</a> and <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security" target="_blank">SSL</a> technologies to make sure your information is 100% secure.
-			{% endfilter %}
+	{% endfilter %}
 		</p>
-		{% if page.custom_fields.page_is_c4 %}
+	{% if page.custom_fields.page_is_c4 %}
 		<p><strong class="text-small-caps">Contact Us:</strong>Questions? Problems? Please contact us at <a href="mailto:donations@350.org?subject=Question%20about%20donation%20to%20350.org">donations@350action.org</a>.</p>
 		<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="https://350action.org/update">350action.org/update</a></p>
-		{% else %}
+	{% else %}
 			<div class="margin-bottom-normal">
 				{% if page.payment_processor_information.currency == 'AUD' %}
 				<p><strong class="text-small-caps">Donate by Cheque</strong>: Make your cheque payable to <em>350.org</em> and mail it to <em>350.org  Limited, Suite 8 / 50 Reservoir Street, Surry Hills, NSW 2010, Australia.</em>.</p>
@@ -565,9 +568,10 @@
 
 <p>350.org is a registered 501c3 non-profit organization and all contributions are tax-deductible in the United States. 350.org's EIN/Tax ID is 26-1150699. <a href="https://350.org/additional-financial-and-regulatory-information/">Additional financial information for US donors</a>.</p>
 						{% endfilter %}
-					{% endif %}
-			</div>
 		{% endif %}
+			</div>
+	{% endif %}
+{% endif %}
 	</div>
 </div>
 
