--- a/donate.html
+++ b/donate.html
@@ -536,7 +536,9 @@
 <div id="donation-other" class="section padding-medium width-normal bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}">
 	<div class="section-inner">
 {% if templateset.custom_fields.donate_footer_text %}
-	{{ templateset.custom_fields.donate_footer_text }}
+	{% autoescape off %}
+		{{ templateset.custom_fields.donate_footer_text }}
+	{% endautoescape %}
 {% else %}
 	{% if page.custom_fields.page_is_c4 %}
 		<p class="strong">Contributions or gifts to 350 Action are not deductible as charitable contributions for Federal income tax purposes.</p>
