--- a/survey.html
+++ b/survey.html
@@ -1,7 +1,7 @@
 {% extends "./wrapper.html" %}{% load actionkit_tags %}
 {% block content %}
 
-<section id="action-lead" class="section action-lead width-narrow padding-large bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+<section id="action-lead" class="section action-lead width-narrow padding-large notch notch-down bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
 		<div id="action-header" class="">
 			{% if page.custom_fields.page_pretitle %}
@@ -38,7 +38,7 @@
 {% autoescape off %}
 			<input type="hidden" name="lists" value="{{ page.list.id }}" />
 			<input type="hidden" name="page" value="{{ page.name }}" />
-			<div id="survey-custom-questions" class="form-style-expanded text-large2 margin-bottom-huge">
+			<div id="survey-custom-questions" class="form-style-expanded text-large margin-bottom-huge">
 	{% for question in form.surveyquestion_set.all %}
 				<div class="survey-question margin-bottom-large input-{{ question.field_type }}">
 					<label class="strong text-strong text-blue margin-bottom-small">{{ question.question_label }}</label>
@@ -46,7 +46,10 @@
 				</div>
 	{% endfor %}
 			</div>
+			<hr class="margin-large">
+		<div class="text-large">
 		{% include "./user_form_wrapper.html" %}
+	</div>
 		<div class="input-submit">
 			<input type="submit" value="{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}Submit{% endif %}" class="submit" />
 		</div>
