making sure "other amount" field uses correct font

--- a/donate.html
+++ b/donate.html
@@ -219,7 +219,7 @@
 								</noscript>
                 <label for="ak-other-amount-field" class="input-radio-button input-radio-button-other bg-ltgray text-font-display text-large3 strong margin-bottom-small">
                   <span class="ak-currency-sym">{{ page.currency_sym }}</span>
-									<input type="number" onkeypress="return (event.charCode == 8 || event.charCode == 0) ? null : event.charCode >= 48 && event.charCode <= 57" id="ak-other-amount-field" name="amount_other" size="3">
+									<input type="number" onkeypress="return (event.charCode == 8 || event.charCode == 0) ? null : event.charCode >= 48 && event.charCode <= 57" id="ak-other-amount-field" class="text-font-display" name="amount_other" size="3">
                 </label>
               </li>
     {% else %}
