--- a/event_create.html
+++ b/event_create.html
@@ -25,6 +25,7 @@
 .form-style-expanded .input-time-event_starts_at,
 .form-style-expanded .input-ampm-event_starts_at{
   display:inline-block;
+  font-size:1rem;
   margin-right:1%;
   vertical-align:text-top;
   width:65%;}
