--- a/letter.html
+++ b/letter.html
@@ -1,12 +1,11 @@
-{% extends "./wrapper.html" %}{% load actionkit_tags %}
-
-
+{% extends "./wrapper.html" %}
+{% load actionkit_tags %}
 {% block content %}
 
 <section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
 		<div id="action-header" class="{% if page.custom_fields.page_layout_style == 'expanded' %}c10{% else %}c5{% endif %} ct10 cm10 c-wide">
-			<a id="jump-to-form" href="#action-form" class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"letter_submit_button" %}Send Your Message{% endfilter %}{% endif %}</a> 
+			<a id="jump-to-form" href="#action-form" class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"letter_submit_button" %}Send Your Message{% endfilter %}{% endif %}</a>
 			{% if page.custom_fields.page_pretitle %}
 			<p id="action-pretitle" class="text-font-secondary"><span class="highlight bg-dkgray-trans">{{ page.custom_fields.page_pretitle }}</span></p>
 			{% endif %}
@@ -25,8 +24,8 @@
 		{% if page.custom_fields.page_layout_style == "expanded" %}
 		</div>
 		{% endif %}
-		
-		
+
+
 		<div id="action-description" class="text-large margin-top-none margin-bottom-huge {% if page.custom_fields.page_layout_style == 'expanded' %}c6 ct10 cm10 c-wide{% endif %}" {% if page.custom_fields.page_layout_style == "expanded" %}{% else %}data-read-more-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}"{% endif %}>
 		{% autoescape off %}
 			{% include_tmpl form.about_text %}
@@ -43,16 +42,18 @@
 		</div>
 	{% else %}
 		<form id="action-form" class="c5 ct7_5 cm10 c-wide form-changeorg form-style-labelabove ak-form action_form" name="act" method="POST" action="/act/" accept-charset="utf-8">
+			<input type="hidden" name="utf8" value="&#x2714;">
+			<input type="hidden" name="page" value="{{ page.name }}" />
 			{% autoescape off %}
 			<div id="form-intro" class="p text-large text-lineheight-small strong">
-			{% if page.custom_fields.form_text_above_form %}
-				{{ page.custom_fields.form_text_above_form }}
-			{% endif %}
-			{% if form.statement_leadin %}
-				{% include_tmpl form.statement_leadin %}
-			{% else %}
-				{% filter ak_text:"letter_form_intro" %}Personalize your message:{% endfilter %}
-			{% endif %}
+				{% if page.custom_fields.form_text_above_form %}
+					{{ page.custom_fields.form_text_above_form }}
+				{% endif %}
+				{% if form.statement_leadin %}
+					{% include_tmpl form.statement_leadin %}
+				{% else %}
+					{% filter ak_text:"letter_form_intro" %}Personalize your message:{% endfilter %}
+				{% endif %}
 			</div>
 			{% include "./progress_meter.html" %}
 			<div class="input-textarea form-user-comment input-letter margin-bottom-none">
@@ -60,37 +61,36 @@
 				<textarea class="letter-text" id="letter-content" name="action_comment">{% include_tmpl form.letter_text  %}</textarea>
 			</div>
 			<p class="text-right text-small2 margin-top-small margin-bottom-normal"><em>{% filter ak_text:"letter_edit_instructions" %}You can edit this text to make it personal to you.{% endfilter %}</em></p>
-			<input type="hidden" name="utf8" value="&#x2714;">
-			<input type="hidden" name="page" value="{{ page.name }}" />
 			{% include "./user_form_wrapper.html" %}
 			{% endautoescape %}
 			<ul style="display:none;" id="ak-errors"><li></li></ul>
 			{% if page.custom_fields.form_additional_fields %}
 				<div class="form-additional-html">
 					{{ page.custom_fields.form_additional_fields }}
-				</div>	
+				</div>
 			{% endif %}
 			<div class="input-wrapper input-submit">
 				<input type="submit" class="submit" value="{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"letter_submit_button" %}Send Your Message{% endfilter %}{% endif %}" />
 			</div>
-			
+
 			<div id="action-toc" class="text-small icon-before icon-faded" data-icon="&#xE93E;">
-				{% if page.custom_fields.form_short_toc %}
-					{{ page.custom_fields.form_short_toc }}
-				{% elif page.custom_fields.form_opt_in %}
-					{% filter ak_text:"general_secure_signup" %}350.org respects your privacy.{% endfilter %}
-				{% elif page.custom_fields.page_is_c4 %}
-					{% filter ak_text:"general_default_toc_c4" %}350 Action will send you updates and notifications when you can make a difference.{% endfilter %}
-				{% else %}
-					{% filter ak_text:"general_default_toc" %}350.org will send you updates and notifications when you can make a difference.{% endfilter %}
-				{% endif %}
+			{% if page.custom_fields.form_short_toc %}
+				{{ page.custom_fields.form_short_toc }}
+			{% elif page.custom_fields.form_opt_in %}
+				{% filter ak_text:"general_secure_signup" %}350.org respects your privacy.{% endfilter %}
+			{% elif page.custom_fields.page_is_c4 %}
+				{% filter ak_text:"general_default_toc_c4" %}350 Action will send you updates and notifications when you can make a difference.{% endfilter %}
+			{% else %}
+				{% if }
+				{% filter ak_text:"general_default_toc" %}350.org will send you updates and notifications when you can make a difference.{% endfilter %}
+			{% endif %}
 			</div>
 		</form>
-		{% include "./social_plugins.html" %}		
+		{% include "./social_plugins.html" %}
 		<div id="recent-actions" class="c6 ct6 cm10 c-wide text-small">
 			{% include "./recentactions.html" %}
 		</div>
 	{% endif %}
 	</div>
 </section>
-{% endblock %}		
+{% endblock %}
