--- a/event_create.html
+++ b/event_create.html
@@ -153,7 +153,7 @@
         <div id="id_event_is_private_row" class="input-radio ak-input-type-event id_event_is_private cb-container">
           <label>Visibility</label>
           <div id="event-is-pubic-wrapper" class="input-radio-option-group">
-            <input id="id_event_is_public" type="radio" class="radio" value="false" name="event_is_private" checked />
+            <input id="id_event_is_public" type="radio" class="radio" value="false" name="event_is_private" />
             <label class="radio-label" for="id_event_is_public">
               <span class="text-large text-strong">{% filter ak_text:"event_create_field_label_public" %}Public{% endfilter %}</span><br>
               <span class="text-small opacity-50">{% filter ak_text:"event_create_field_label_public_note" %}Anyone can find your event by searching the events map, and 350 will send emails inviting people in your area.{% endfilter %}</span>
