--- a/event_host_tools.html
+++ b/event_host_tools.html
@@ -120,7 +120,7 @@
       actionkit.forms.initValidation('manage-host');
     if ($('#manage-attendee').length)
       actionkit.forms.initValidation('manage-attendee');
-    var attendeeTable = new formTable(fields, 'attendee_', 5);
+    // var attendeeTable = new formTable(fields, 'attendee_', 5);
     $('#more-attendees .data-entry').append(attendeeTable.build());
     $('#more-attendees input.more-rows').click(function(e){attendeeTable.addRows($(e.target).data('count'))});
     // when adding attendees, clear empty rows
