commenting out more attendeeTable functions

--- a/event_host_tools.html
+++ b/event_host_tools.html
@@ -121,10 +121,10 @@
     if ($('#manage-attendee').length)
       actionkit.forms.initValidation('manage-attendee');
     // var attendeeTable = new formTable(fields, 'attendee_', 5);
-    $('#more-attendees .data-entry').append(attendeeTable.build());
-    $('#more-attendees input.more-rows').click(function(e){attendeeTable.addRows($(e.target).data('count'))});
+    // $('#more-attendees .data-entry').append(attendeeTable.build());
+    // $('#more-attendees input.more-rows').click(function(e){attendeeTable.addRows($(e.target).data('count'))});
     // when adding attendees, clear empty rows
-    $('#more-attendees input[type=submit]').click(function(e){
+    // $('#more-attendees input[type=submit]').click(function(e){
       attendeeTable.clearEmptyRows()
       return true;
     });
