--- a/event_host_tools.html
+++ b/event_host_tools.html
@@ -167,6 +167,8 @@ a.cancel-link:hover,
   display:inline-block;
   text-align:center;
   width:1.1em;}
+#modal-confirm .button{
+  display:block;}
 
 </style>
 
@@ -214,10 +216,10 @@ a.cancel-link:hover,
 		     		<li class="host-tool-event-unconfirmed margin-bottom-medium">
 							<a class="button host-tool icon-before icon-faded" data-icon="&#xE942;" onclick="$.get('/event/{{campaign.local_name}}/{{event.id}}/modify/confirm/'); $(this).text('Confirmed');" href="#">{% filter ak_text:"event_host_tools_confirm_event" %}Confirm event{% endfilter %}</a>
 						</li>
-            <div id="modal-confirm" class="hidden js-modal-onload js-modal text-large" data-modal-source="#modal-confirm" data-modal-classes-inner="">
+            <div id="modal-confirm" class="hidden js-modal-onload js-modal" data-modal-source="#modal-confirm" data-modal-classes-inner="padding-medium bg-white modal-content section-inner">
               <h2>{% filter ak_text:"event_host_tools_confirm_event" %}Confirm Your Event{% endfilter %}</h2>
               <p>{% filter ak_text:"event_host_tools_confirm_event_instructions" %}Once you confirm your event, it will start appearing on the map and in the event search results.{% endfilter %}</p>
-              <a class="button host-tool icon-before icon-faded" data-icon="&#xE942;" onclick="$.get('/event/{{campaign.local_name}}/{{event.id}}/modify/confirm/'); $(this).text('Confirmed');" href="#">{% filter ak_text:"event_host_tools_confirm_event" %}Confirm event{% endfilter %}</a>
+              <a class="button button-primary icon-before icon-faded" data-icon="&#xE942;" onclick="$.get('/event/{{campaign.local_name}}/{{event.id}}/modify/confirm/'); $(this).text('Confirmed');" href="#">{% filter ak_text:"event_host_tools_confirm_event" %}Confirm event{% endfilter %}</a>
             </div>
 		{% endif %}
 	{% endif %}
