--- a/event_host_tools.html
+++ b/event_host_tools.html
@@ -219,7 +219,7 @@ a.cancel-link:hover,
             <div id="modal-confirm" class="hidden js-modal-onload js-modal" data-modal-source="#modal-confirm" data-modal-classes-inner="padding-medium bg-white modal-content section-inner">
               <h2>{% filter ak_text:"event_host_tools_confirm_event" %}Confirm Your Event{% endfilter %}</h2>
               <p>{% filter ak_text:"event_host_tools_confirm_event_instructions" %}Once you confirm your event, it will start appearing on the map and in the event search results.{% endfilter %}</p>
-              <a class="button button-primary icon-before icon-faded event-host-confirm" data-icon="&#xE942;" onclick="$.get('/event/{{campaign.local_name}}/{{event.id}}/modify/confirm/'); $('.event-host-confirm').text('{% filter ak_text:"event_host_tools_confirm_success" %}Confirmed{% endfilter %}');modalClose();" href="#">{% filter ak_text:"event_host_tools_confirm_event" %}Confirm event{% endfilter %}</a>
+              <a class="button button-big button-primary icon-before icon-faded event-host-confirm" data-icon="&#xE942;" onclick="$.get('/event/{{campaign.local_name}}/{{event.id}}/modify/confirm/'); $('.event-host-confirm').text('{% filter ak_text:"event_host_tools_confirm_success" %}Confirmed{% endfilter %}');modalClose();" href="#">{% filter ak_text:"event_host_tools_confirm_event" %}Confirm event{% endfilter %}</a>
             </div>
 		{% endif %}
 	{% endif %}
