more commenting out old JS

--- a/event_host_tools.html
+++ b/event_host_tools.html
@@ -124,10 +124,10 @@
     // $('#more-attendees .data-entry').append(attendeeTable.build());
     // $('#more-attendees input.more-rows').click(function(e){attendeeTable.addRows($(e.target).data('count'))});
     // when adding attendees, clear empty rows
-    // $('#more-attendees input[type=submit]').click(function(e){
+    /* $('#more-attendees input[type=submit]').click(function(e){
       attendeeTable.clearEmptyRows()
       return true;
-    });
+    }); */
     $(window).load(function() {
       updateConfirmationMessage();
     });
