--- a/call.html
+++ b/call.html
@@ -19,7 +19,7 @@
 </div>
 {% else %}
 
-<form class="ak-form" name="act" method="post" action="/act/" accept-charset="utf-8">
+<form class="ak-form section padding-none" name="act" method="post" action="/act/" accept-charset="utf-8">
 <input type="hidden" name="utf8" value="&#x2714;" />
 <input type="hidden" name="page" value="{{ page.name }}">
 <section id="call-info" class="section bg-blue width-wide text-center padding-medium notch">
