--- a/survey.html
+++ b/survey.html
@@ -1,18 +1,19 @@
-{% extends "./wrapper.html" %}{% load actionkit_tags %}
+{% extends "./wrapper.html" %}
+{% load actionkit_tags %}
 {% block content %}
 
 <section id="action-lead" class="section action-lead width-narrow padding-large notch notch-down bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
 		<div id="action-header" class="">
-			{% if page.custom_fields.page_pretitle %}
+{% if page.custom_fields.page_pretitle %}
 				<p id="action-pretitle" class="text-font-secondary"><span class="highlight bg-dkgray-trans">{{ page.custom_fields.page_pretitle }}</span></p>
-			{% endif %}
+{% endif %}
 				<h2 id="action-title" class="title3">
-			{% if page.custom_fields.page_title_custom_html %}
+{% if page.custom_fields.page_title_custom_html %}
 				{% autoescape off %} {{ page.custom_fields.page_title_custom_html }} {% endautoescape %}
-			{% else %}
+{% else %}
 				<span class="{{ page.custom_fields.page_title_style }}">{{ page.title }}</span>
-			{% endif %}
+{% endif %}
 				</h2>
 			<div class="" data-read-more-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}">{% include_tmpl form.introduction_text %}</div>
 		</div>
@@ -20,7 +21,7 @@
 	</div>
 </section>
 
-<section id="survey-questions" class="width-narrow bg-ltgray padding-medium">
+<section id="survey-questions" class="section width-narrow bg-ltgray padding-medium">
 	<div class="section-inner">
 {% if page.custom_fields.page_is_inactive %}
 	{% autoescape off %}
@@ -29,33 +30,35 @@
 {% else %}
 		<form class="ak-form" name="act" method="POST" action="/act/" accept-charset="utf-8">
 			<input type="hidden" name="utf8" value="&#x2714;">
-{% if page.custom_fields.form_text_above_form %}
-	{% autoescape off %}
+	{% if page.custom_fields.form_text_above_form %}
+		{% autoescape off %}
 			<div id="form-intro">{{ page.custom_fields.form_text_above_form }}</div>
-	{% endautoescape %}
-{% endif %}
+		{% endautoescape %}
+	{% endif %}
 
 {% autoescape off %}
 			<input type="hidden" name="lists" value="{{ page.list.id }}" />
 			<input type="hidden" name="page" value="{{ page.name }}" />
-			<div id="survey-custom-questions" class="form-style-expanded text-large margin-bottom-huge">
+			<div id="survey-custom-questions" class="form-style-expanded margin-bottom-huge">
 	{% for question in form.surveyquestion_set.all %}
-				<div class="survey-question margin-bottom-large input-{{ question.field_type }}">
-					<label class="strong text-strong text-blue margin-bottom-small">{{ question.question_label }}</label>
+				<div class="survey-question margin-bottom-large input input-{{ question.field_type }}">
+					<label class="strong text-strong text-blue margin-bottom-normal">{{ question.question_label }}</label>
 				{{ question.question_html }}
 				</div>
 	{% endfor %}
 			</div>
 			<hr class="margin-large">
-		<div class="text-large">
-		{% include "./user_form_wrapper.html" %}
-	</div>
-		<div class="input-submit">
-			<input type="submit" value="{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"general_submit" %}Submit{% endfilter %}{% endif %}" class="submit" />
-		</div>
+			<div class="text-large">
+			{% include "./user_form_wrapper.html" %}
+			</div>
+			<div class="input-submit">
+				<input type="submit" value="{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"general_submit" %}Submit{% endfilter %}{% endif %}" class="submit" />
+			</div>
 {% endautoescape %}
 		</form>
+{% endif %}
 	</div>
 </section>
-{% endif %}
+
+
 {% endblock %}
