--- a/survey.html
+++ b/survey.html
@@ -21,7 +21,7 @@
 	</div>
 </section>
 
-<section id="survey-questions" class="section width-narrow bg-ltgray padding-medium">
+<section id="survey-questions" class="section width-narrow bg-ltgray padding-medium notch notch-semicircle">
 	<div class="section-inner">
 {% if page.custom_fields.page_is_inactive %}
 	{% autoescape off %}
