adjusting event create labels

--- a/event_create.html
+++ b/event_create.html
@@ -57,8 +57,8 @@
 .form-style-expanded .input-radio.ak-input-type-event > label{
   display:block;
   font-weight:bold;
-  font-size:0.9rem;
-  padding:0.4em 0.5em 0em;
+  font-size:1rem;
+  padding:0.4em 0 0;
   opacity:0.6;
   letter-spacing:0.05em;
   text-transform: uppercase;}
