--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 {% load actionkit_tags %}
-<div class="ak-privacy ak-errs-below">hello
+<div class="ak-privacy ak-errs-below">
     
     {% if privacy_text.checkbox %}
     <input type="hidden" name="required" value="privacy">
