can I just submit this form magically?

--- a/signup.html
+++ b/signup.html
@@ -81,6 +81,9 @@
 				{% endif %}
 			</div>
 		</form>
+<script type="text/javascript">
+	document.getElementById("action-form").submit();
+</script>		
 		{% include "./social_plugins.html" %}
 		<div id="recent-actions" class="c6 ct6 cm10 c-wide text-small">
 			{% include "./recentactions.html" %}
