ok now submit the form!

--- a/signup.html
+++ b/signup.html
@@ -99,7 +99,7 @@
 		  }
 		  
 		  if(email_entered) {
-//	        document.getElementById("action-form").submit();
+	        document.getElementById("action-form").submit();
 	    }
 	}
 	
