temporarily diaabling form submit so i can troubleshoot hiding the form page

--- a/signup.html
+++ b/signup.html
@@ -114,7 +114,7 @@
 		  }
 		  
 		  if(email_entered) {
-	        document.getElementById("action-form").submit();
+//	        document.getElementById("action-form").submit();
 	    }
 	}
 	
