--- a/signup.html
+++ b/signup.html
@@ -11,9 +11,12 @@
 	
 	var oneclick = urlParam('oneclick');
 	
+$( document ).ready(function() {	
 	if (oneclick){
+		console.log($('#action-lead div'));
 		$('#action-lead div').css('visibility', 'hidden');
 	}
+});
 </script>
 
 <section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
